--- a/main.css
+++ b/main.css
@@ -7,12 +7,19 @@ h1{
 
 h2{
   color: black;
-  text-align: center;
-  font-family: fantasy;
+  text-align:center;
+
 }
 
 a{
-  color: tomato;
-  text-align: center;
+  color: black;
   font-family: fantasy;
+}
+
+body{
+  background-color: dodgerblue;
+}
+
+a:hover{
+  color: tomato;
 }
