--- a/e10/css/main.css
+++ b/e10/css/main.css
@@ -26,7 +26,8 @@ float: left;
   width: 800px;
   float: center;
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
+  margin-bottom: 25px;
 }
 
 .main{
@@ -40,7 +41,8 @@ float: left;
   height: 30px;
   width: 800px;
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
+  margin-bottom: 25px auto;
 }
 
 .center{
@@ -53,17 +55,18 @@ text-align: center;
 .onecolumn{
   background-color: pink;
   height: 400px;
-  width: 15%;
+  width: 215px;
   float: left;
   padding: 20px;
   margin: 10px;
-  margin-left: 10px;
+  margin-left: 16%;
+  margin-right: 25px;
 }
 
 .twocolumn{
-  background-color: orange;
+  background-color: pink;
   height: 400px;
-  width: 15%;
+  width: 215px;
   float: left;
   padding: 20px;
   margin: 10px;
@@ -71,9 +74,9 @@ text-align: center;
 }
 
 .threecolumn{
-  background-color: black;
+  background-color: pink;
   height: 400px;
-  width: 15%;
+  width: 215px;
   float: left;
   padding: 20px;
   margin: 10px;
@@ -86,7 +89,7 @@ text-align: center;
   width: 800px;
   float: left auto;
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
 }
 
 .headertwo{
@@ -109,12 +112,13 @@ text-align: center;
   float: left;
   padding: 10px;
   margin: 10px;
+  margin-left: 17%;
 }
 
 .side{
   background-color: black;
   height: 230px;
-  width: 25%;
+  width: 21%;
   float: left;
   padding: 10px;
   margin: 10px;
@@ -127,6 +131,7 @@ text-align: center;
   float: left;
   padding: 10px;
   margin: 10px;
+  margin-left: 17%;
 }
 
 .second{
@@ -140,15 +145,18 @@ text-align: center;
   float: left;
   padding: 10px;
   margin: 10px;
+  margin-left: 17%;
 }
 
 .twoside{
   background-color: black;
   height: 230px;
-  width: 25%;
+  width: 21%;
   float: left;
   padding: 10px;
   margin: 10px;
+  position: absolute;
+  margin-left: 59%;
 }
 
 .twolittle{
@@ -158,4 +166,5 @@ text-align: center;
   float: left;
   padding: 10px;
   margin: 10px;
+  margin-left: 17%;
 }
